--- a/README.org
+++ b/README.org
@@ -53,13 +53,42 @@ https://quii.gitbook.io/learn-go-with-tests/ and have been loving it.
   write an application in Go, backed by tests.
   - 1. :: [[./httpServer/README.org][HTTP server]]
 
-* Practice programs
-  This is just some random practice programs I have done to test myself. To view
-  these please go [[./PracticePrograms/README.org][here]].
-
 * Other courses
   I also have worked through a couple of Udemy courses on Go and I have included
   my notes on those:
   - 1. :: [[./IntroToTesting/README.org][Introduction to Testing in Go]]
   - 2. :: [[./WorkingWithConcurrency/README.org][Working with Concurrency in Go]]
   - 3. :: [[./Microservices/README.org][Working with Microservices in Go]]
+
+* Project Layout
+  Since the very first time I looked at a Go repository I have been very
+  confused by the structure of the directories within a project. Luckily it
+  seems that there are no hard rules around project layout from the core Go team
+  unless you are intending your code to be an public module in which case there
+  are some rules so that ~go mod~ can properly important your module.
+
+  I did find this repository that describes general guidelines that have been
+  accepted by the larger Go community: [[https://github.com/golang-standards/project-layout][here]].
+
+  [[https://github.com/golang-standards/project-layout?tab=readme-ov-file#go-directories][Go Directories]]:
+  - ~/cmd~:
+    Main applications for this project.
+
+    The directory name for each application should match the name of the
+    executable you want to have (e.g., ~/cmd/myapp~).
+
+    Don't put a lot of code in the application directory. If you think the code
+    can be imported and used in other projects, then it should live in the
+    ~/pkg~ directory. If the code is not reusable or if you don't want others to
+    reuse it, put that code in the ~/internal~ directory. You'll be surprised
+    what others will do, so be explicit about your intentions!
+
+    It's common to have a small ~main~ function that imports and invokes the
+    code from the ~/internal~ and ~/pkg~ directories and nothing else.
+
+    See the [[https://github.com/golang-standards/project-layout/blob/master/cmd/README.md][/cmd]] directory for examples.
+  - ~/internal~
+
+* Practice programs
+  This is just some random practice programs I have done to test myself. To view
+  these please go [[./PracticePrograms/README.org][here]].
