--- a/BuildingGoModules/README.org
+++ b/BuildingGoModules/README.org
@@ -14,6 +14,7 @@ through the "[[https://www.udemy.com/course/building-a-module-in-go-golang/][Bui
   - 3. :: [[./app-upload/][Application Upload]]
   - 4. :: [[./app-dir/][Application Directory]]
   - 5. :: [[./app-slug/][Application Slug]]
+  - 6. :: [[./app-download/][Application Download]]
 
 * Notes:
   In Go 1.18 the Go team added a feature called workspaces. This features allows
