--- a/BuildingGoModules/README.org
+++ b/BuildingGoModules/README.org
@@ -15,6 +15,8 @@ through the "[[https://www.udemy.com/course/building-a-module-in-go-golang/][Bui
   - 4. :: [[./app-dir/][Application Directory]]
   - 5. :: [[./app-slug/][Application Slug]]
   - 6. :: [[./app-download/][Application Download]]
+  - 7. :: [[./app-json/][Application JSON]]
+  - 8. :: [[./api-test/][Final Test]]
 
 * Notes:
   In Go 1.18 the Go team added a feature called workspaces. This features allows
@@ -33,3 +35,7 @@ through the "[[https://www.udemy.com/course/building-a-module-in-go-golang/][Bui
   More info can be found on workspaces here:
   - https://go.dev/blog/get-familiar-with-workspaces
   - https://go.dev/doc/tutorial/workspaces
+
+  The Go team has put together a guide on how modules are going to be handled
+  going forward with regards to semantic versioning of modules:
+  https://go.dev/blog/v2-go-modules.
