--- a/DesignPatternsInGo/README.org
+++ b/DesignPatternsInGo/README.org
@@ -13,6 +13,7 @@ through the "[[https://www.udemy.com/course/working-with-design-patterns-in-go-g
   - 3. :: [[./abstractFactory/README.org][Abstract Factory Pattern]]
   - 4. :: [[./repository/README.org][Repository Pattern]]
   - 5. :: [[./singleton/README.org][Singleton Pattern]]
+  - 6. :: [[./builder/README.org][Builder Pattern]]
   - final :: [[./breeders/][Breeders]]
 
 * Notes:
