--- a/DesignPatternsInGo/singleton/README.org
+++ b/DesignPatternsInGo/singleton/README.org
@@ -6,3 +6,6 @@ object. There is more to it than that, but in simple terms it:
 - Allows us to restrict the instantiation of something to a singular instance
 - Is useful when exactly one object is needed to coordinate actions across a
   system.
+
+I implemented the singleton pattern to the breeders program in the following
+commit: [[https://github.com/maker2413/GoNotes/commit/9e3a30d5c8c7db7102873367dc6d43cdef81130f#diff-2d040692224014ffd266c095db0bad59a82be7c5b3a0ad2c8aac58669203511c][commit]]
