--- a/DesignPatternsInGo/builder/README.org
+++ b/DesignPatternsInGo/builder/README.org
@@ -15,3 +15,5 @@ Both versions of this pattern allow us to chain methods. Here is an example:
           SetAgeEstimated(true).
           Build()
 #+end_src
+
+This directory also contains a simple [[./][example]].
