Started worker pool section

--- a/DesignPatternsInGo/README.org
+++ b/DesignPatternsInGo/README.org
@@ -16,6 +16,7 @@ through the "[[https://www.udemy.com/course/working-with-design-patterns-in-go-g
   - 6. :: [[./builder/README.org][Builder Pattern]]
   - 7. :: [[./adapter/README.org][Adapter Pattern]]
   - 8. :: [[./decorator/README.org][Decorator Pattern]]
+  - 9. :: [[./workerPool/README.org][Work Pool Pattern]]
   - final :: [[./breeders/][Breeders]]
 
 * Notes:
