--- a/BuildingWebApplicationsWithGo/README.org
+++ b/BuildingWebApplicationsWithGo/README.org
@@ -1,1 +1,14 @@
 #+TITLE: Building Web Applications with Go
+
+This directory just contains Notes and sample programs I made while working
+through the "[[https://www.udemy.com/course/building-web-applications-with-go-intermediate-level/?couponCode=KEEPLEARNING][Building Web Applications with Go]]" course on Udemy.
+
+In this course we will be building out a simple web server that process credit
+card transactions via [[https://stripe.com/][Stripe]]: [[./webApp/][Web Application]]
+
+In this course we will also be using an application called [[https://github.com/air-verse/air][air]] to live reload
+our web pages as we develop them. You can install air with the following
+command:
+#+begin_src shell
+  go install github.com/air-verse/air@latest
+#+end_src
