working on some more simple practice programs

--- a/PracticePrograms/README.org
+++ b/PracticePrograms/README.org
@@ -6,3 +6,5 @@ learned.
 * Programs
   - 1. :: [[./dataStructures/README.org][Data Structures]]
   - 2. :: [[./pong/][Pong]]
+  - 3. :: [[./readFile/][Concate files]]
+  - 4. :: [[./statusChecker/][Site status checker]]
