--- a/PracticePrograms/dataStructures/README.org
+++ b/PracticePrograms/dataStructures/README.org
@@ -1,4 +1,4 @@
 #+TITLE: Data Structures
 
-This is just program that builds out some simple data structures like stacks,
-queues, and linked lists.
+This is just some programs that build out some simple data structures like
+stacks, queues, linked lists, and binary search trees.
